﻿Fixed query options for non-action POST