@@ -1,1 +1,2 @@
 ﻿Fixed query options for non-action POST
+Fix tracking CLR types that match the EDM (#425)
